--- a/styles/main.css
+++ b/styles/main.css
@@ -1,15 +1,24 @@
+html  {
+  height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
-  background-color: #504551;
+  background-color: #000000;
   font-family: 'Source Sans Pro', sans-serif;
   color: #e4d9e5;
+  background-image: url('https://images2.alphacoders.com/480/480530.png');
+  text-align: center;
 }
 
 
 #binary-container {
   height: 100%; width: 100%;
   border: 1px solid red;
+  background-color: #000000;
+  opacity: .9;
+  margin-top: 30%;
 }
 
 #root {
@@ -18,9 +27,11 @@ body {
 }
 
 h1 {
- border: 1px solid red;
  margin: 0 auto;
+ border: 1px solid red;
  font-size: 1.5em;
+ width: 15%;
+ padding: .75em;
 }
 
 #first-layer-container, .active {
