--- a/styles/main.css
+++ b/styles/main.css
@@ -14,54 +14,59 @@ body {
 
 #binary-container {
   height: 100%; width: 100%;
-  border: 1px solid red;
+/*  border: 1px solid red;*/
   background-color: #000000;
   opacity: .9;
-  margin-top: 20%;
   transform-origin: 50% 100%;
-  transform: perspective(600px) rotateX(28deg);
+  transform: perspective(600px) rotateX(36deg);
   text-align: center;
 }
 
+
+#reverse-binary-container {
+ transform: perspective(600px) rotateX(-18deg);
+}
 
 
 h1 {
  text-align: center;
  margin: 0 auto;
  border: 1px solid red;
- font-size: 1.5em;
- width: 30%;
+ font-size: 2.5em;
+ width: 59%;
  padding: .75em;
 }
+
 
 
 /*============================================*/
 /*FIRST LAYER*/
 
 #first-layer-container, .active {
-  border: 1px solid red;
+/*  border: 1px solid red;*/
   height: 20%; width: 100%;
 }
 
 #first-layer-container > ul > li {
   display: inline-block;
-  height: 10%; width: 12%;
   margin: 2em;
-  padding: .75em;
 }
 
 /*============================================*/
 /*SECOND LAYER*/
 
 #second-layer-container, .active {
-  border: 1px solid red;
+/*  border: 1px solid red;*/
   height: 20%; width: 100%;
+}
+
+#second-layer-container > ul {
+  margin-left: -30%;
 }
 
 #second-layer-container > ul > li {
   display: inline-block;
-  margin: 1em;
-  padding: .5em;
+  margin: .75em;
 }
 
 
@@ -73,35 +78,38 @@ h1 {
 /*THIRD LAYER*/
 
 #third-layer-container, .active {
-  border: 1px solid red;
+/*  border: 1px solid red;*/
   height: 20%; width: 100%;
 }
 
 #third-layer-container > ul {
-  margin-left: -36%;
+  margin-left: -30%;
 }
 
 #third-layer-container > ul > li {
   display: inline-block;
   margin: 1em;
-  padding: .5em;
 }
 
 #third-layer-container > ul > li:nth-child(2) {
-  margin-right: 3.5em;
+  margin-right: 3em;
 }
 
 /*============================================*/
 /*FOURTH LAYER*/
 #fourth-layer-container, .active {
-  border: 1px solid red;
+ /* border: 1px solid red;*/
   height: 20%; width: 100%;
+}
+
+
+#fourth-layer-container > ul {
+  margin-left: -87%;
 }
 
 #fourth-layer-container > ul > li {
   display: inline-block;
   margin: 1em;
-  padding: .5em;
 }
 
 /*============================================*/
@@ -129,15 +137,21 @@ h1 {
 
 /*============================================*/
 
+
+ul {
+  transform: perspective(600px) rotateX(-18deg);
+}
+
 li {
   border: 1px solid red;
   border-radius: 15px;
   list-style: none;
+  padding: 2em;
 }
 
 
 li:hover {
-  color: #e4d9e5;
+  background-color: #e4d9e5;
 }
 
 .info-box {
