--- a/styles/main.css
+++ b/styles/main.css
@@ -12,137 +12,55 @@ body {
 }
 
 
-#binary-container {
-  height: 100%; width: 100%;
+.container {
+  margin: 30%;
+  margin-left: 38%;
+  height: 60%; width: 80%
+}
+
+.wrapper {
+  perspective: 800px;
+  perspective-origin: 50% 100px;
+}
+
+.cube {
+  position: relative;
+  width: 200px;
+  transform-style: preserve-3d;
+}
+
+.cube div {
   border: 1px solid red;
-  background-color: #000000;
-  opacity: .9;
-  margin-top: 20%;
-  transform-origin: 50% 100%;
-  transform: perspective(600px) rotateX(28deg);
-  text-align: center;
+  position: absolute;
+  height: 200px; width: 200px;
+}
+
+#back {
+  transform: translateZ(-100px) rotateY(180deg);
+}
+
+#right {
+  transform: rotateY(-270deg) translateX(100px);
+  transform-origin: top right;
+}
+
+#left {
+  transform: rotateY(270deg) translateX(-100px);
+  transform-origin: center left;
+}
+
+#top {
+  transform: rotateX(-90deg) translateY(-100px);
+  transform-origin: top center;
+}
+
+#bottom {
+  transform: rotateX(90deg) translateY(100px);
+  transform-origin: bottom center;
+}
+
+#front {
+  transform: translateZ(100px);
 }
 
 
-
-h1 {
- text-align: center;
- margin: 0 auto;
- border: 1px solid red;
- font-size: 1.5em;
- width: 30%;
- padding: .75em;
-}
-
-
-/*============================================*/
-/*FIRST LAYER*/
-
-#first-layer-container, .active {
-  border: 1px solid red;
-  height: 20%; width: 100%;
-}
-
-#first-layer-container > ul > li {
-  display: inline-block;
-  height: 10%; width: 12%;
-  margin: 2em;
-  padding: .75em;
-}
-
-/*============================================*/
-/*SECOND LAYER*/
-
-#second-layer-container, .active {
-  border: 1px solid red;
-  height: 20%; width: 100%;
-}
-
-#second-layer-container > ul > li {
-  display: inline-block;
-  margin: 1em;
-  padding: .5em;
-}
-
-
-#second-layer-container > ul > li:nth-child(2) {
-  margin-right: 4.5em;
-}
-
-/*============================================*/
-/*THIRD LAYER*/
-
-#third-layer-container, .active {
-  border: 1px solid red;
-  height: 20%; width: 100%;
-}
-
-#third-layer-container > ul {
-  margin-left: -36%;
-}
-
-#third-layer-container > ul > li {
-  display: inline-block;
-  margin: 1em;
-  padding: .5em;
-}
-
-#third-layer-container > ul > li:nth-child(2) {
-  margin-right: 3.5em;
-}
-
-/*============================================*/
-/*FOURTH LAYER*/
-#fourth-layer-container, .active {
-  border: 1px solid red;
-  height: 20%; width: 100%;
-}
-
-#fourth-layer-container > ul > li {
-  display: inline-block;
-  margin: 1em;
-  padding: .5em;
-}
-
-/*============================================*/
-/*DIAGONAL LINES*/
-
-
-.left-diagonal {
-    width: 10%; height: 0px;
-    border-bottom: 1px solid red;
-    -webkit-transform:
-        translateY(25px)
-        translateX(193px)
-        rotate(-62deg);
-}
-
-.right-diagonal {
-    width: 10%; height: 0px;
-    border-bottom: 1px solid red;
-    -webkit-transform:
-        translateY(25px)
-        translateX(300px)
-        rotate(-118deg);
-
-}
-
-/*============================================*/
-
-li {
-  border: 1px solid red;
-  border-radius: 15px;
-  list-style: none;
-}
-
-
-li:hover {
-  color: #e4d9e5;
-}
-
-.info-box {
-  margin: 0 auto;
-  height: 30%; width: 20%;
-  border-radius: 12px;
-  border: 2px solid red;
-}
