--- a/styles/main.css
+++ b/styles/main.css
@@ -12,55 +12,58 @@ body {
 }
 
 
-.container {
-  margin: 30%;
-  margin-left: 38%;
-  height: 60%; width: 80%
+.cube-container {
+    width: 200px;
+    height: 200px;
+    position: relative;
+    margin: 0 auto 40px;
+    text-align: center;
+    -webkit-perspective: 1000px;
+    -moz-perspective: 1000px;
+    -o-perspective: 1000px;
+    perspective: 1000px;
 }
 
-.wrapper {
-  perspective: 800px;
-  perspective-origin: 50% 100px;
+#cube {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    -o-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    -webkit-transition: -webkit-transform 1s;
+    -moz-transition: -moz-transform 1s;
+    -o-transition: -o-transform 1s;
+    transition: transform 2s;
 }
 
-.cube {
-  position: relative;
-  width: 200px;
-  transform-style: preserve-3d;
+#cube figure {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border: 2px solid red;
+    line-height: 196px;
+    font-size: 4em;
+    font-weight: bold;
+    color: white;
+    text-align: center;
 }
 
-.cube div {
-  border: 1px solid red;
-  position: absolute;
-  height: 200px; width: 200px;
+#cube.panels-backface-invisible figure {
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -o-backface-visibility: hidden;
+    backface-visibility: hidden;
 }
 
-#back {
-  transform: translateZ(-100px) rotateY(180deg);
-}
 
-#right {
-  transform: rotateY(-270deg) translateX(100px);
-  transform-origin: top right;
-}
-
-#left {
-  transform: rotateY(270deg) translateX(-100px);
-  transform-origin: center left;
-}
-
-#top {
-  transform: rotateX(-90deg) translateY(-100px);
-  transform-origin: top center;
-}
-
-#bottom {
-  transform: rotateX(90deg) translateY(100px);
-  transform-origin: bottom center;
-}
-
-#front {
-  transform: translateZ(100px);
-}
+#cube .front  { transform: rotateY(   0deg ) translateZ( 100px ); }
+#cube .back   { transform: rotateX( 180deg ) translateZ( 100px ); }
+#cube .right  { transform: rotateY(  90deg ) translateZ( 100px ); }
+#cube .left   { transform: rotateY( -90deg ) translateZ( 100px ); }
+#cube .top    { transform: rotateX(  90deg ) translateZ( 100px ); }
+#cube .bottom { transform: rotateX( -90deg ) translateZ( 100px ); }
 
 
