--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,15 @@
+@font-face {
+  font-family: github;
+  src: url('../media/fonts/fontello.ttf');
+}
+
+
 html  {
   height: 100%;
 }
 
 body {
+  height: 100%;
   margin: 0;
   padding: 0;
   background-color: #000000;
@@ -11,9 +18,7 @@ body {
   background-image: url('https://images2.alphacoders.com/480/480530.png');
 }
 
-header {
-  width: 100%; height: 2em;
-}
+
 
 h1 {
   display: inline-block;
@@ -27,27 +32,43 @@ ul {
 }
 
 li {
+  border-right: 1px solid #e4d9e5; 
   display: inline-block;
   list-style: none;
   padding: 0 1em;
 }
 
 
-li:first-child {
-  border-right: 1px solid #e4d9e5; 
+li:last-child {
+  border: none;
+  font-family: github;
 }
 
 
 a {
   text-decoration: none;
-  color: #e4d9e5;
+  color: white;
+
+
 }
 
 a:hover {
   color: #3BB0A7;
 }
 
-/*===================================*/
+
+footer {
+/*  position: fixed;*/
+  margin-bottom: 0;
+  height: 3em; width: 100%;
+  opacity: .2;
+  background-color: #2BA9DA;
+
+}
+
+
+
+/*===================================
 /*CUBE*/
 
 
@@ -55,7 +76,7 @@ a:hover {
     width: 200px;
     height: 200px;
     position: relative;
-    margin: 60% 10% 40px;
+    margin: 15% 10% 40px;
     text-align: center;
     -webkit-perspective: 1000px;
     -moz-perspective: 1000px;
@@ -133,7 +154,7 @@ h2 {
 
 
 p {
-  border: 1px solid red;
+  border: 1px solid #e4d9e5;
   height: 4em; width: 45%;
   margin: 0 auto;
   margin-top: 10%;
