--- a/styles/main.css
+++ b/styles/main.css
@@ -23,11 +23,14 @@ body {
 h1 {
   display: inline-block;
   padding-left: .5em;
-  font-size: 4em;
+  font-size: 3em;
   opacity: .2;
+  margin-bottom: 1%;
 }
 
 ul {
+  margin: 0;
+  padding-left: .75em;
   display: inline-block;
 }
 
@@ -76,7 +79,7 @@ footer {
     width: 200px;
     height: 200px;
     position: relative;
-    margin: 15% 10% 40px;
+    margin: 25% 10% 40px;
     text-align: center;
     -webkit-perspective: 1000px;
     -moz-perspective: 1000px;
@@ -162,7 +165,13 @@ p {
 
 
 @media screen and (min-width: 480px) {
+    h1 {
+        font-size: 4em;
+    }
+    ul {
+      margin-right: 0;
+    }
     .cube-container {
-      margin: 18% auto 40px;
+      margin: 12% auto 40px;
     }
 }
