--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,11 @@
 @font-face {
   font-family: github;
-  src: url('../media/fonts/fontello.ttf');
+  src: url('../media/fonts/github.ttf');
+}
+
+@font-face {
+  font-family: linkedin;
+  src: url('../media/fonts/linkedin.ttf');
 }
 
 
@@ -44,10 +49,13 @@ li {
   padding: 0 1em;
 }
 
+li:nth-child(3) {
+  font-family: github;  
+}
 
 li:last-child {
   border: none;
-  font-family: github;
+  font-family: linkedin;
 }
 
 /*===================================
@@ -185,6 +193,11 @@ p {
   padding: 1em;
 }
 
+h4 {
+  font-size: 1.75em;
+  margin: 5% 10%;
+}
+
 #my-face {
   border: 1px solid #e4d9e5;
   border-radius: 60px;
@@ -197,6 +210,7 @@ p {
 }
 
 #about > ul {
+  margin-top: 5%;
   padding: 1em;
 }
 
@@ -220,17 +234,12 @@ p {
   text-align: center;
 }
 
-#contact > ul {
-  margin-left: 0;
+#contact > h4 {
   text-align: center;
-  width: 100%;
-}
-
-#contact > ul > li {
+  border: 1px solid white;
   padding: 1em;
-  font-family: 'Source Sans Pro', sans-serif;
-
 }
+
 
 /*========================================*/
 /*MEDIA QUERIES*/
