--- a/media/fonts/fontello-2a0827f4/css/fontello-ie7.css
+++ b/media/fonts/fontello-2a0827f4/css/fontello-ie7.css
@@ -10,4 +10,4 @@
   /* font-size: 120%; */
 }
  
-.icon-linkedin-squared { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe802;&nbsp;'); }
+.icon-right-circle { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe806;&nbsp;'); }
