--- a/media/fonts/fontello-2a0827f4/css/fontello.css
+++ b/media/fonts/fontello-2a0827f4/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?242979');
-  src: url('../font/fontello.eot?242979#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?242979') format('woff2'),
-       url('../font/fontello.woff?242979') format('woff'),
-       url('../font/fontello.ttf?242979') format('truetype'),
-       url('../font/fontello.svg?242979#fontello') format('svg');
+  src: url('../font/fontello.eot?66066408');
+  src: url('../font/fontello.eot?66066408#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?66066408') format('woff2'),
+       url('../font/fontello.woff?66066408') format('woff'),
+       url('../font/fontello.ttf?66066408') format('truetype'),
+       url('../font/fontello.svg?66066408#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?242979#fontello') format('svg');
+    src: url('../font/fontello.svg?66066408#fontello') format('svg');
   }
 }
 */
@@ -55,4 +55,4 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-linkedin-squared:before { content: '\e802'; } /* '' */
+.icon-right-circle:before { content: '\e806'; } /* '' */
