--- a/media/fonts/fontello-66125060/css/fontello-ie7.css
+++ b/media/fonts/fontello-66125060/css/fontello-ie7.css
@@ -10,4 +10,4 @@
   /* font-size: 120%; */
 }
  
-.icon-github-circled { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe800;&nbsp;'); }
+.icon-left-circle { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe805;&nbsp;'); }
