--- a/media/fonts/fontello-66125060/css/fontello.css
+++ b/media/fonts/fontello-66125060/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?26794460');
-  src: url('../font/fontello.eot?26794460#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?26794460') format('woff2'),
-       url('../font/fontello.woff?26794460') format('woff'),
-       url('../font/fontello.ttf?26794460') format('truetype'),
-       url('../font/fontello.svg?26794460#fontello') format('svg');
+  src: url('../font/fontello.eot?61453900');
+  src: url('../font/fontello.eot?61453900#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?61453900') format('woff2'),
+       url('../font/fontello.woff?61453900') format('woff'),
+       url('../font/fontello.ttf?61453900') format('truetype'),
+       url('../font/fontello.svg?61453900#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?26794460#fontello') format('svg');
+    src: url('../font/fontello.svg?61453900#fontello') format('svg');
   }
 }
 */
@@ -55,4 +55,4 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-github-circled:before { content: '\e800'; } /* '' */
+.icon-left-circle:before { content: '\e805'; } /* '' */
