--- a/styles/main.css
+++ b/styles/main.css
@@ -175,20 +175,21 @@ p {
 
 .flat-figure {
   position: absolute;
-  height: 100%; width: 100%;
+  height: 120%; width: 120%;
   display: inline-block;
   margin: 1em;
   transform-style: preserve-3d;
 }
 
-.right { transform: rotateY( 129deg ) translateZ( 100px ); }
-.left { transform: rotateY( -129deg ) translateZ( 100px ); }
+.right { transform: rotateY( 139deg ) translateZ( 150px ); }
+.left { transform: rotateY( -139deg ) translateZ( 150px ); }
 
-.left-right {
+.left-right-buttons {
   margin: 10%;
   color: white;
   font-size: 2em;
   opacity: .5;
+  width: 100%
 }
 
 #r { font-family: rightclick; }
