--- a/styles/main.css
+++ b/styles/main.css
@@ -175,21 +175,22 @@ p {
 
 .flat-figure {
   position: absolute;
-  height: 120%; width: 120%;
+  height: 100%; width: 100%;
   display: inline-block;
-  margin: 1em;
+  margin-left: -30%;
+  padding: 1em;
   transform-style: preserve-3d;
 }
 
-.right { transform: rotateY( 139deg ) translateZ( -150px ); }
-.left { transform: rotateY( -139deg ) translateZ( -150px ); }
+.right { transform: rotateY( 0deg ) translateZ( -120px ); }
+.left { transform: rotateY( -90deg ) translateZ( -120px ); }
 
 .left-right-buttons {
-  margin: 10%;
   color: white;
   font-size: 2em;
   opacity: .5;
-  width: 100%
+  width: 100%;
+  margin: 8% -14%;
 }
 
 #r { font-family: rightclick; }
@@ -199,10 +200,17 @@ p {
 #l:hover { opacity: .8; }
 
 .overlay {
-  height: 100%; width: 100%;
-/*  background-color: grey;*/
-  color: white;
-  transform-style: preserve-3d;
+  height: 150%; width: 110%;
+  background-color: silver;
+  padding: 0;
+  margin: 0;
+  color: #081F1E;
+  z-index: 20;
+  margin: -36%;
+  border: 2px solid #808080;
+  -webkit-box-shadow: 0px 0px 65px -7px #10505C;
+  -moz-box-shadow: 0px 0px 65px -7px #10505C;
+  box-shadow: 0px 0px 65px -7px #10505C;
 }
 
 /*========================================*/
@@ -319,5 +327,9 @@ span {
 
     #contact > h4 {
       font-size: 1.75em;
+    }
+
+    .left-right-buttons {
+      margin: 8% auto;
     }
 }
