--- a/styles/main.css
+++ b/styles/main.css
@@ -35,6 +35,7 @@ body {
   background-image: url('https://images2.alphacoders.com/480/480530.png');
 }
 
+
 /*===================================
 /*HEADER/NAV*/
 
@@ -76,6 +77,8 @@ li:last-child {
 a {
   text-decoration: none;
   color: white;
+  -webkit-transition: all 600ms cubic-bezier(0.645, 0.045, 0.355, 1);
+  transition:         all 600ms cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
 a:hover { opacity: .7; }
