--- a/styles/main.css
+++ b/styles/main.css
@@ -18,6 +18,11 @@
   src: url('../media/fonts/right.ttf');
 }
 
+@font-face {
+  font-family: x;
+  src: url('../media/fonts/x.ttf');
+}
+
 /*===================================
 /*HTML/BODY*/
 
@@ -77,8 +82,6 @@ li:last-child {
 a {
   text-decoration: none;
   color: white;
-  -webkit-transition: all 600ms cubic-bezier(0.645, 0.045, 0.355, 1);
-  transition:         all 600ms cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
 a:hover { opacity: .7; }
@@ -215,6 +218,21 @@ p {
   -moz-box-shadow: 0px 0px 65px -7px #10505C;
   box-shadow: 0px 0px 65px -7px #10505C;
 }
+
+
+#return-to-cube {
+  color: white;
+  font-size: 2em;
+  opacity: .5;
+  width: 100%;
+  right: -94%;
+  padding: .5em;
+  position: absolute;
+  z-index: 21;
+  font-family: x;
+}
+
+#return-to-cube:hover { opacity: .8; }
 
 /*========================================*/
 /*INFO BOX*/
