--- a/styles/main.css
+++ b/styles/main.css
@@ -43,6 +43,7 @@ body {
 }
 
 
+
 /*===================================
 /*HEADER/NAV*/
 
@@ -59,9 +60,7 @@ h1 {
 }
 
 ul {
-  text-align: center;
-  margin: 0 auto;
-  display: inline-block;
+  margin: 0 20%;
 }
 
 li {
@@ -145,11 +144,11 @@ figure {
 
 h2 { font-size: 2em; }
 
-#enigmatic      { background-image: url('../media/enigmatic.png'); }
-#medtrakr       { background-image: url('../media/medtrakr.png'); }
-#connectfour    { background-image: url('../media/connectfour.png'); }
-#space          { background-image: url('../media/planets.png'); }
-#oli-and-olive  { background-image: url('../media/oliandolive.png'); }
+#enigmatic      { background-image: url('../media/images/enigmatic.png'); }
+#medtrakr       { background-image: url('../media/images/medtrakr.png'); }
+#connectfour    { background-image: url('../media/images/connectfour.png'); }
+#space          { background-image: url('../media/images/planets.png'); }
+#oli-and-olive  { background-image: url('../media/images/oliandolive.png'); }
 
 /*========================================*/
 /*CUBE ROTATIONS*/
@@ -268,7 +267,7 @@ h4 {
 #my-face {
   border: 1px solid #e4d9e5;
   border-radius: 70px;
-  background-image: url('../media/ashleigh.jpg');
+  background-image: url('../media/images/ashleigh.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -334,10 +333,8 @@ footer {
     }
 
     header > ul {
-/*      margin-top: 0;
-      margin-bottom: 0;
-      margin-right: 0;
-      margin-left: auto;*/
+      margin: 0 auto;
+      display: inline-block;
     }
 
     .cube-container {
@@ -357,6 +354,8 @@ footer {
     }
 
     #contact > ul {
+      margin-left: 22%;
+      margin-right: 22%;
       font-size: 4em;
     }
 }
